--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,15 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "boxcluster_visualization"
+path = "src/main.rs"
+
+[lib]
+name = "boxcluster_visualization"
+path = "src/lib.rs"
+
 [dependencies]
 itertools = "0.10.5"
+debug_print = "1.0.0"
+rand = "0.8.5"
